[package]
name = "rigid-body-simulation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.9.1" }
rand = "0.8.5"
bevy_egui = "0.18"
smooth-bevy-cameras = "0.6.0"
rayon = "1.6.1"
bevy_rapier3d = { version = "0.19.0", features = [ "simd-nightly", "debug-render" ] }